# hs-inline-c-bench

./: .gitignore  README.md
inline-c-bench/: inline-c-bench.cabal  makefile
inline-c-bench/cbits/: test.c  test.h
inline-c-bench/src/: InlineC.hs  Internal.hs  Lib.hs  PutGet.hs  Types.hs
