name:                inline-c-bench
version:             0.1.0.0
synopsis:            Minimal Haskell inline-c testbench
description:         Please see README.md
homepage:            https://github.com/ocramz/hs-inline-c-bench#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco@gmail.com
copyright:           2016 Marco Zocca
category:            FFI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Lib
                       Internal
                       PutGet
                       InlineC
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       inline-c,
                       template-haskell
  default-language:    Haskell2010
  include-dirs:        cbits/
  c-sources:           src/InlineC.c

executable inline-c-bench-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , inline-c-bench
  default-language:    Haskell2010

test-suite inline-c-bench-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , inline-c-bench
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ocramz/hs-inline-c-bench
